Skip to content

CMake deprecation warnings in try_compile projects are not suppressed by -Wno-deprecated

The following warning is displayed even if -Wno-deprecated command line parameter is specified:

CMake Deprecation Warning at /opt/cmake-3.7.0/share/cmake-3.7/Modules/CMakeForceCompiler.cmake:83 (message):
  The CMAKE_FORCE_CXX_COMPILER macro is deprecated.  Instead just set
  CMAKE_CXX_COMPILER and allow CMake to identify the compiler.

Manual says:

-Wno-deprecated
    Suppress deprecated functionality warnings.
    Suppress warnings for usage of deprecated functionality, that are meant for the author of the CMakeLists.txt files.
To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information